    of "=*=PROVIDED=*=" as the package version (Closes: #395271).  Thanks
    to Niko Tyni for this patch.
  * Don't include epoch version in directory names (Closes: #482456).
    Thanks to Raphael Hertzog.
  * man/sbuild-setup.7.in: Replace references to buildd.chroot with
    sbuild-createchroot, and adduser with sbuild-adduser (Closes: #483654).
    Thanks to Marc Fargas.

 -- Roger Leigh <rleigh@debian.org>  Sat, 31 May 2008 09:47:41 +0100

sbuild (0.57.3-1) unstable; urgency=low

  * New release.
  * --chroot and --arch now work together (Closes: #479714).

 -- Roger Leigh <rleigh@debian.org>  Sun, 11 May 2008 10:49:17 +0100

sbuild (0.57.2-1) unstable; urgency=low

  * debian/copyright: Update copyright holders and copyright information.
  * debian/rules: Run dh_link in binary-indep target to correct symlinks.
  * debian/wanna-build.install: Install manual pages.
  * man/sbuild.1.in:
    - Add missing character, thanks to LI Daobing (Closes: #474487).
    - Document --binNMU (Closes: #466927).
    - --distribution should be --dist (Closes: #477693).  Thanks to Martin
      F Krafft.
  * debian/README.Debian: Remove reference to README-buildd.chroot
    (Closes: #474030), thanks to Marc Fargas.  Update sbuild statistics
    information.
  * Add --apt-update option to sbuild to run "apt-get update" in the
    chroot prior to fetching sources and building (Closes: #472350).
    Thanks to Timothy G Abbott for this patch.
  * Add --chroot option to specify a chroot separately from the
    distribution name (Closes: #474160).  Thanks to Simon McVittie for
    this patch.
  * debian/control: Depend on debhelper version 6 or greater (Closes:
    #477655).  Thanks to Martin F Krafft.
  * lib/Sbuild/Conf.pm: Don't require $mailto to be set if not running in
    a buildd environment (Closes: #478045).  Thanks to Martin F Krafft.
  * Use dcmd to parse dsc files, rather than hand-parsing.  This allows
    support of the new dpkg source format.